src/index.css
/* @import url('https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap'); */
@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

@import "tailwindcss";
@import "tw-animate-css";
@custom-variant dark (&:is(.dark *));

:root {
  --background: oklch(0.9702 0 0);
  --foreground: oklch(0.3211 0 0);
  --card: oklch(1.0000 0 0);
  --card-foreground: oklch(0.3211 0 0);
  --popover: oklch(1.0000 0 0);
  --popover-foreground: oklch(0.3211 0 0);
  /* --primary: oklch(0.4430 0.1667 320.6392);         */
  --primary: oklch(73.44% 0.1478 168.52);                /* primary */
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(52.53% 0.1104 235.72);               /* secondary */
  --secondary-foreground: oklch(0.3211 0 0); 
  --muted: oklch(0.9219 0 0);
  --muted-foreground: oklch(0.3211 0 0);
  /* --accent: oklch(0.6582 0.1690 248.8135); */
  --accent: oklch(45.064% 0.21334 317.349);                   /* accent */                    
  --accent-foreground: oklch(1.0000 0 0);
  --destructive: oklch(0.6280 0.2577 29.2339);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.9219 0 0);
  --input: oklch(1.0000 0 0);
  --ring: oklch(0.4430 0.1667 320.6392);
  --chart-1: oklch(0.4430 0.1667 320.6392);
  --chart-2: oklch(0.8422 0.1255 83.8529);
  --chart-3: oklch(0.6582 0.1690 248.8135);
  --chart-4: oklch(0.6280 0.2577 29.2339);
  --chart-5: oklch(0.7536 0.1626 130.5022);
  --sidebar: oklch(0.9702 0 0);
  --sidebar-foreground: oklch(0.3211 0 0);
  --sidebar-primary: oklch(0.4430 0.1667 320.6392);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.6582 0.1690 248.8135);
  --sidebar-accent-foreground: oklch(1.0000 0 0);
  --sidebar-border: oklch(0.9219 0 0);
  --sidebar-ring: oklch(0.4430 0.1667 320.6392);
  --font-sans: Poppins;
  --font-serif: Poppins;
  --font-mono: Poppins;
  --radius: 8px;
  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 2px 4px -1px hsl(0 0% 0% / 0.10);
  --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 4px 6px -1px hsl(0 0% 0% / 0.10);
  --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 8px 10px -1px hsl(0 0% 0% / 0.10);
  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.25);
  --tracking-normal: 0px;
}

.dark {
  /* --background: oklch(0.3211 0 0); */
  --background: oklch(0 0 0);
  --foreground: oklch(1.0000 0 0);
  --card: oklch(0.3867 0 0);
  --card-foreground: oklch(1.0000 0 0);
  --popover: oklch(0.3867 0 0);
  --popover-foreground: oklch(1.0000 0 0);
  --primary: oklch(73.44% 0.1478 168.52);
  --primary-foreground: oklch(1.0000 0 0);
  --secondary: oklch(52.53% 0.1104 235.72);
  --secondary-foreground: oklch(0.3211 0 0);
  --muted: oklch(0.4495 0 0);
  --muted-foreground: oklch(1.0000 0 0);
  --accent: oklch(49.922% 0.23749 317.437);
  --accent-foreground: oklch(1.0000 0 0);
  --destructive: oklch(0.6280 0.2577 29.2339);
  --destructive-foreground: oklch(1.0000 0 0);
  --border: oklch(0.4495 0 0);
  --input: oklch(0.3867 0 0);
  --ring: oklch(0.4430 0.1667 320.6392);
  --chart-1: oklch(0.4430 0.1667 320.6392);
  --chart-2: oklch(0.8422 0.1255 83.8529);
  --chart-3: oklch(0.6582 0.1690 248.8135);
  --chart-4: oklch(0.6280 0.2577 29.2339);
  --chart-5: oklch(0.7536 0.1626 130.5022);
  --sidebar: oklch(0.3211 0 0);
  --sidebar-foreground: oklch(1.0000 0 0);
  --sidebar-primary: oklch(0.4430 0.1667 320.6392);
  --sidebar-primary-foreground: oklch(1.0000 0 0);
  --sidebar-accent: oklch(0.6582 0.1690 248.8135);
  --sidebar-accent-foreground: oklch(1.0000 0 0);
  --sidebar-border: oklch(0.4495 0 0);
  --sidebar-ring: oklch(0.4430 0.1667 320.6392);
  --font-sans: Poppins;
  --font-serif: Poppins;
  --font-mono: Poppins;
  --radius: 8px;
  --shadow-2xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-xs: 0px 1px 2px 0px hsl(0 0% 0% / 0.05);
  --shadow-sm: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 1px 2px -1px hsl(0 0% 0% / 0.10);
  --shadow-md: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 2px 4px -1px hsl(0 0% 0% / 0.10);
  --shadow-lg: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 4px 6px -1px hsl(0 0% 0% / 0.10);
  --shadow-xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.10), 0px 8px 10px -1px hsl(0 0% 0% / 0.10);
  --shadow-2xl: 0px 1px 2px 0px hsl(0 0% 0% / 0.25);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --color-card: var(--card);
  --color-card-foreground: var(--card-foreground);
  --color-popover: var(--popover);
  --color-popover-foreground: var(--popover-foreground);
  --color-primary: var(--primary);
  --color-primary-foreground: var(--primary-foreground);
  --color-secondary: var(--secondary);
  --color-secondary-foreground: var(--secondary-foreground);
  --color-muted: var(--muted);
  --color-muted-foreground: var(--muted-foreground);
  --color-accent: var(--accent);
  --color-accent-foreground: var(--accent-foreground);
  --color-destructive: var(--destructive);
  --color-destructive-foreground: var(--destructive-foreground);
  --color-border: var(--border);
  --color-input: var(--input);
  --color-ring: var(--ring);
  --color-chart-1: var(--chart-1);
  --color-chart-2: var(--chart-2);
  --color-chart-3: var(--chart-3);
  --color-chart-4: var(--chart-4);
  --color-chart-5: var(--chart-5);
  --color-sidebar: var(--sidebar);
  --color-sidebar-foreground: var(--sidebar-foreground);
  --color-sidebar-primary: var(--sidebar-primary);
  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
  --color-sidebar-accent: var(--sidebar-accent);
  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
  --color-sidebar-border: var(--sidebar-border);
  --color-sidebar-ring: var(--sidebar-ring);

  --font-sans: var(--font-sans);
  --font-mono: var(--font-mono);
  --font-serif: var(--font-serif);

  --radius-sm: calc(var(--radius) - 4px);
  --radius-md: calc(var(--radius) - 2px);
  --radius-lg: var(--radius);
  --radius-xl: calc(var(--radius) + 4px);

  --shadow-2xs: var(--shadow-2xs);
  --shadow-xs: var(--shadow-xs);
  --shadow-sm: var(--shadow-sm);
  --shadow: var(--shadow);
  --shadow-md: var(--shadow-md);
  --shadow-lg: var(--shadow-lg);
  --shadow-xl: var(--shadow-xl);
  --shadow-2xl: var(--shadow-2xl);

  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
  --tracking-normal: var(--tracking-normal);
  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
}

body {
  letter-spacing: var(--tracking-normal);
}

@layer base {
  * {
    @apply border-border outline-ring/50;
  }

  body {
    @apply bg-background text-foreground;
  }
}

/* .logo-font {
  font-family: "Ma Shan Zheng", cursive;
  font-size: 1.7rem;
} */

.logo-font {
  /* font-family: "Sedgwick Ave Display", cursive; */
  /* font-family: "Satisfy", cursive; */
  font-family: "Lobster", sans-serif;
  font-size: 1.7rem;
  /* text-transform: lowercase; */
}

